# CS370-TB

./: CMakeLists.txt  Makefile  house.cpp  lighting.h  texture.frag  texture.vert  utilfuncs.cpp
models/: chair.mtl  fan.mtl
